gcc/testsuite/rust/rustc/ui/rfc-2093-infer-outlives/nested-regions.rs
#![feature(rustc_attrs)]

#[rustc_outlives]
struct Foo<'a, 'b, T> { // { dg-error "" "" { target *-*-* } }
    x: &'a &'b T
}

fn main() {}

